--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea
+# 子项目中的文件
+**/mvnw
+**/mvnw.cmd
+**/.mvn
+**/.gitignore
