--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.datasource.url=jdbc:mysql://119.91.150.36:3306/cloud_mall?useUnicode=true
 spring.datasource.username=develop
 spring.datasource.password=de!v@E#l$o%p
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+#\u670D\u52A1\u6CE8\u518C
+spring.application.name=cloud-product
+spring.cloud.nacos.discovery.server-addr=119.91.150.36:8848
+#\u914D\u7F6E\u4E2D\u5FC3\u6D4B\u8BD5\u6570\u636E
+config.test.user=testConfigLocalUser
+config.test.age=1888
+#\u6570\u636E\u5E93
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
+
 server.port=10000
