--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+server.port=7000
+
 spring.datasource.url=jdbc:mysql://119.91.150.36:3306/cloud_mall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=develop
 spring.datasource.password=de!v@E#l$o%p
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+#\u6570\u636E\u5E93
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
-server.port=7000
+spring.application.name=cloud-coupon
+spring.cloud.nacos.discovery.server-addr=119.91.150.36:8848
