--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 server.port=9000
+spring.application.name=cloud-order
+spring.cloud.nacos.discovery.server-addr=119.91.150.36:8848
