--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 server.port=8000
+spring.application.name=cloud-member
+spring.cloud.nacos.discovery.server-addr=119.91.150.36:8848
 
