--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,7 +6,15 @@ spring:
           uri: https://www.baidu.com
           predicates:
             - Query=url,baidu
-        - id: qq_route
-          uri: https://www.qq.com
+        - id: product_route
+          uri: lb://cloud-product
           predicates:
-            - Query=url,qq
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/product/(?<segment>.*), /product/$\{segment}
+        - id: admin_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*), /renren-fast/$\{segment}
