--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=10000
 spring.datasource.url=jdbc:mysql://119.91.150.36:3306/cloud_mall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=develop
 spring.datasource.password=de!v@E#l$o%p
@@ -11,5 +12,7 @@ config.test.age=1888
 #\u6570\u636E\u5E93
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
-
-server.port=10000
+#mybatis-plus.global-config.db-config.logic-delete-value=0
+#mybatis-plus.global-config.db-config.logic-not-delete-value=1
+# \u914D\u7F6Eslq\u6253\u5370\u65E5\u5FD7
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
