--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
     uri-encoding: UTF-8
     max-threads: 1000
     min-spare-threads: 30
+    connection-timeout: 5000ms
   port: 8080
-  connection-timeout: 5000ms
   servlet:
     context-path: /renren-fast
 
@@ -39,6 +39,11 @@ spring:
     throw-exception-if-no-handler-found: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      server-addr: 119.91.150.36:8848
 #  resources:
 #    add-mappings: false
 
