--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.url=jdbc:mysql://119.91.150.36:3306/cloud_mall?useUnicode=true
 spring.datasource.username=develop
 spring.datasource.password=de!v@E#l$o%p
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.max-lifetime=500000
+spring.datasource.hikari.max-idle=10
+spring.datasource.hikari.max-wait=10000
+spring.datasource.hikari.min-idle=1
+spring.datasource.hikari.initial-size=1
+spring.datasource.hikari.validation-query=select 1
 #\u670D\u52A1\u6CE8\u518C
 spring.application.name=cloud-product
 spring.cloud.nacos.discovery.server-addr=119.91.150.36:8848
